using gui to start individual training processes

--- a/lib/config.json
+++ b/lib/config.json
@@ -216,9 +216,9 @@
                 "fileName": "/home/daveotte/work/vr_avatar/HMDtransforms.txt"
             }
         ],
-    "trainingGroupIndices": [2],
-    "testingGroupIndices": [1],
-    "nnConfigs": ["predictShldr", "predictHip"],
+    "trainingGroupIndices": [2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39],
+    "testingGroupIndices": [23,24,1],
+    "nnConfigs": ["predictHip","predictElbow","predictShldr"],
     "nnConfigData":
         [
 
