--- a/lib/config.json
+++ b/lib/config.json
@@ -207,7 +207,6 @@
                 "dir": "/home/daveotte/work/mocap_animations_with_binary/test"
             }
         ],
-
     "transformsFiles":
         [
 
@@ -216,12 +215,8 @@
                 "fileName": "/home/daveotte/work/vr_avatar/HMDtransforms.txt"
             }
         ],
-    "trainingGroupIndices": [2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39],
-    "testingGroupIndices": [23,24,1],
-    "nnConfigs": ["predictHip","predictElbow","predictShldr"],
     "nnConfigData":
         [
-
             {
                 "name": "predictHip",
                 "transforms":
@@ -232,11 +227,11 @@
                             ["hip", "world"] 
                         ],
                 "method": "predictHip",
+                "logDir":"/home/daveotte/work/trials",
                 "weightsFileName": "/home/daveotte/work/nn_weights/predictHip.h5",
                 "nnFileName": "/home/daveotte/work/nn_weights/predictHip.json",
                 "outputCsvFileName": "/home/daveotte/work/predictHipOutput.csv",
-                "epochs": 100,
-                "timeMode": 24
+                "epochs": 1
             },
             {
                 "name": "predictShldr",
@@ -248,11 +243,11 @@
                             ["rShldr", "world"] 
                         ],
                 "method": "predictShldr",
+                "logDir":"/home/daveotte/work/trials",
                 "weightsFileName": "/home/daveotte/work/nn_weights/predictShldr.h5",
                 "nnFileName": "/home/daveotte/work/nn_weights/predictShldr.json",
                 "outputCsvFileName": "/home/daveotte/work/predictElbowOutput.csv",
-                "epochs": 100,
-                "timeMode": 24
+                "epochs": 1
             },
             {
                 "name": "predictElbow",
@@ -265,11 +260,14 @@
 
                         ],
                 "method": "predictElbow",
+                "logDir":"/home/daveotte/work/trials",
                 "weightsFileName": "/home/daveotte/work/nn_weights/predictElbow.h5",
                 "nnFileName": "/home/daveotte/work/nn_weights/predictElbow.json",
                 "outputCsvFileName": "/home/daveotte/work/predictElbowOutput.csv",
-                "epochs": 100,
-                "timeMode": 24
+                "epochs": 1
             }        
-       ]
+       ],
+    "trainingGroupIndices": [2],
+    "testingGroupIndices": [1],
+    "nnConfigs": ["predictHip","predictElbow","predictShldr"]
 }
