--- a/lib/config.json
+++ b/lib/config.json
@@ -205,6 +205,11 @@
                 "name": "test",
                 "index":0,
                 "dir": "/home/daveotte/work/mocap_animations_with_binary/test"
+            },                  
+            {
+                "name": "test2",
+                "index":100,
+                "dir": "/home/daveotte/work/mocap_animations_with_binary/test"
             }
         ],
     "transformsFiles":
@@ -258,7 +263,21 @@
                         ],
                 "method": "predictElbow",
                 "logDir":"/home/daveotte/work/trials",
-                "epochs": 1
+                "epochs": 80
+            },
+            {
+                "name": "predictElbowTest",
+                "transforms":
+                        [   
+                            ["head", "world"],
+                            ["rHand", "world"],    
+                            ["lHand", "world"],    
+                            ["rForeArm", "world"] 
+
+                        ],
+                "method": "predictElbow",
+                "logDir":"/home/daveotte/work/trials",
+                "epochs": 200
             },
             {
                 "name": "predictEverything",
@@ -303,10 +322,23 @@
                         ],
                 "method": "predictElbowsVel",
                 "logDir":"/home/daveotte/work/trials",
-                "epochs": 100
+                "epochs": 200
+            },
+            {
+                "name": "predictElbowsVel2",
+                "transforms":
+                        [   
+                            ["head", "world"],
+                            ["rHand", "world"],    
+                            ["lHand", "world"],    
+                            ["rForeArm", "world"]
+                        ],
+                "method": "predictElbowsVel2",
+                "logDir":"/home/daveotte/work/trials",
+                "epochs": 200
             }      
        ],
-    "trainingGroupIndices": [0],
-    "testingGroupIndices": [10,23,24,12,13,39,38],
-    "nnConfigs": ["predictEverything","predictElbowsVel"]
+    "trainingGroupIndices": [2, 3],
+    "testingGroupIndices": [100],
+    "nnConfigs": ["predictShldr","predictElbow","predictElbowTest","predictElbowsVel","predictElbowsVel2"]
 }
